# epub_reader

./: .gitignore  app.py  buildozer.spec  config.py  main.py  models.py  pyproject.toml  requirements.txt  views.py
android_java/com/pywebview/: EventCallbackWrapper.java  JsApiCallbackWrapper.java  PyJavascriptInterface.java  PyWebChromeClient.java  PyWebViewClient.java  WebViewRequestInterceptor.java
books/: blueprint.py  views.py
books/templates/books/: book.html
home/: views.py
home/templates/home/: index.html
static/css/: CSS.css  base.css  book.css
static/js/: base.js  book.js
templates/: base.html  book.html  index.html
templates/index/: index.html
utils/: server_helpers.py  text_helpers.py
