[project]
name = "epub-reader"
version = "0.1.0"
description = "b file"
authors = [
    {name = "Hakerhakb11",email = "igorshilov2007@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "alembic (==1.18.4)",
    "beautifulsoup4 (==4.14.3)",
    "blinker (==1.9.0)",
    "click (==8.3.2)",
    "colorama (==0.4.6)",
    "ebooklib (==0.20)",
    "flask (==3.1.3)",
    "flask-migrate (==4.1.0)",
    "flask-sqlalchemy (==3.1.1)",
    "greenlet (==3.4.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "livereload (==2.7.1)",
    "lxml (==6.0.4)",
    "mako (==1.3.12)",
    "markupsafe (==3.0.3)",
    "six (==1.17.0)",
    "soupsieve (==2.8.3)",
    "sqlalchemy (==2.0.49)",
    "tornado (==6.5.5)",
    "typing-extensions (==4.15.0)",
    "werkzeug (==3.1.8)",
    "pywebview (>=6.2.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
